--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ui",
+  "name": "@acme/ui",
   "version": "0.0.0",
+  "license": "MIT",
   "main": "./index.tsx",
   "types": "./index.tsx",
-  "license": "MIT",
   "devDependencies": {
+    "@acme/tsconfig": "*",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "tsconfig": "*",
     "typescript": "^4.5.3"
   }
 }
