--- a/apps/with-expo-managed/package.json
+++ b/apps/with-expo-managed/package.json
@@ -7,6 +7,7 @@
     "android": "expo start --android",
     "eject": "expo eject",
     "ios": "expo start --ios",
+    "lint": "eslint . --fix",
     "start": "expo start",
     "web": "expo start --web"
   },
@@ -22,6 +23,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "eslint": "7.14.0",
     "typescript": "~4.3.5"
   }
 }
